--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,10 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "my_package"
+name = "math_utils"
 version = "0.1"
 
 [tool.hatch.build.targets.wheel]
-packages = ["my_package"]
+packages = ["math_utils"]
 
 
